# code-minions

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.ignore/: examples-spec.md  minion-sdk-1.md
design/: minion-sdk.md
design/research/: anthropic-agent-guide.md  minion-company-research.md  minion-research.md  stripe-blog.md
docs/: github-maintenance.md  next-work.md  real-llm-run.md  research-notes.md  roadmap.md
docs/api/: 00_index.md  01_task.md  02_tool.md  03_context.md  04_nodes.md  05_blueprint.md  06_environments.md  07_models.md  08_minion.md  09_result.md  10_testing.md
examples/: 01_stripe_pattern.py  02_spotify_judge.py  03_airbnb_migration.py  04_linkedin_spec.py  05_anthropic_two_agent.py  06_ramp_docker.py  07_coinbase_council.py  08_real_llm_smoke.py  09_real_repo_config_resolution.py  README.md
examples/real/: 01_self_hosted_single_task.py  02_self_hosted_task_queue.py  README.md
examples/research/: 01_stripe_pattern.py  02_spotify_judge.py  03_repository_migration.py  04_linkedin_spec.py  05_anthropic_two_agent.py  06_ramp_docker.py  07_coinbase_council.py
examples/validation/: 08_real_llm_smoke.py  09_real_repo_config_resolution.py
src/codeminions/: __init__.py  events.py  trace.py
src/codeminions/_internal/: engine.py  (+1 more)
src/minion/: __init__.py  trace.py
tests/: test_core.py  test_docker_env.py  test_example_01.py  test_examples_contracts.py  test_mcp.py  test_reliability_audit.py  test_tools.py
(+84 files in other folders)
