[project]
name = "minion-sdk"
version = "0.1.0"
description = "Python SDK for building unattended agentic coding harnesses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.13.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.89.0",
]
openai = [
    "openai>=2.30.0",
]
docker = [
    "docker>=7.1.0",
]
mcp = [
    "mcp>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
